remove theme as submodule and update config

--- a/config.toml
+++ b/config.toml
@@ -73,3 +73,8 @@ enableRobotsTXT = true
   [params.author]
     name = "Sagar Mohan" # Your name as shown in the RSS feed metadata
     # email = "me@example.com" # Added to the footer so readers can reply to posts
+
+  [Params.umami]
+  enabled = true
+  websiteId = "13a6d427-1346-44b2-be1f-37dd3b889672"
+  jsLocation = "https://analytics.my-hugo-blog.tld/umami.js"
